force-app/main/default/objects/CampaignMember/fields/DU_Asset__c.field-meta.xml
<CustomField>
    <fullName>DU_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Connection to specific customer asset related to campaign member to use vehicle information in campaigns (e.g. VIN, Model, …)</description>
    <inlineHelpText>Connection to specific customer asset related to campaign member to use vehicle information in campaigns (e.g. VIN, Model, …)</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>DU_CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>