force-app/main/default/objects/CampaignMember/fields/DU_Contract__c.field-meta.xml
<CustomField>
    <fullName>DU_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Connection to contract related to campaign member to use contract information in campaigns (e.g. Contract End Date, Contract Duration, …)</description>
    <inlineHelpText>Connection to contract related to campaign member to use contract information in campaigns (e.g. Contract End Date, Contract Duration, …)</inlineHelpText>
    <label>Contract</label>
    <referenceTo>DU_Contract__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>DU_CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>