force-app/main/default/objects/CampaignMember/fields/DU_Generic2__c.field-meta.xml
<CustomField>
    <fullName>DU_Generic2__c</fullName>
    <description>Generic field for importing  data used within email templates</description>
    <label>Generic 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>