force-app/main/default/objects/CampaignMember/fields/DU_Partner__c.field-meta.xml
<CustomField>
    <fullName>DU_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Connection to Dealer Account to get information on customers dealer (e.g. Name, Address, …)</description>
    <inlineHelpText>Connection to Dealer Account to get information on customers dealer (e.g. Name, Address, …)</inlineHelpText>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Dealer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>DU_CampaignMembersFromPartner</relationshipName>
    <type>Lookup</type>
</CustomField>